--- a/listTour.html
+++ b/listTour.html
@@ -239,7 +239,7 @@
           <div class="col-sm-12 col-md-9">
           <div class="d-flex flex-column gap-5"> 
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -279,7 +279,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -319,7 +319,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -359,7 +359,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -399,7 +399,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -439,7 +439,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -479,7 +479,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -519,7 +519,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -559,7 +559,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -599,7 +599,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -639,7 +639,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
@@ -679,7 +679,7 @@
              </div>
              </a>
             <!-- card -->
-             <a href="/singleTour.html">
+             <a href="singleTour.html">
               <div class="d-flex cardList shadow-lg  " style="cursor: pointer;" >
                 <!-- image -->
                 <div class="imageCard">
