--- a/singleTour.html
+++ b/singleTour.html
@@ -42,7 +42,7 @@
         <!-- links -->
         <ul class="links_container">
           <li class="active">
-            <a href="/"> Home </a>
+            <a href="Go-elite-Travel"> Home </a>
           </li>
           <li>
             <a href="/"> LUXURY EGYPT TOURS </a>
@@ -79,7 +79,7 @@
         <!-- menue bar box -->
         <ul class="menu_container">
           <li class="active">
-            <a href="/"> Home </a>
+            <a href="Go-elite-Travel"> Home </a>
           </li>
           <li>
             <a href="/"> LUXURY EGYPT TOURS </a>
