--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <!-- links -->
         <ul class="links_container">
           <li class="active">
-            <a href="Go-elite-Travel"> Home </a>
+            <a href=""> Home </a>
           </li>
           <li>
             <a href="listTour.html"> LUXURY EGYPT TOURS </a>
