--- a/singleTour.html
+++ b/singleTour.html
@@ -140,35 +140,11 @@
               class="d-flex align-items-center gap-3 justify-content-center justify-content-md-start p-md-2"
             >
               <li class="d-flex align-items-center gap-2">
-                <i class="fa fa-seedling"></i>
+                <img src="image/privetTour.svg" class="privateImg" alt="">
                 <span> Type: Private tour</span>
               </li>
               <li class="d-flex align-items-center gap-2">
-                <i class="fa fa-calendar"></i>
-                <span> Type: Private tour</span>
-              </li>
-              <li class="d-flex align-items-center gap-2">
-                <i class="fa fa-star"></i>
-                <span>4.8/5</span>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img src="image/destination3.jpg" class="d-block w-100" alt="..." />
-          <div class="carousel-caption contentHeader">
-            <p>CAIRO NILE CRUISE & HURGHADA HOLIDAY TOUR</p>
-          </div>
-          <div class="infoTour">
-            <ul
-              class="d-flex align-items-center gap-3 justify-content-center justify-content-md-start p-md-2"
-            >
-              <li class="d-flex align-items-center gap-2">
-                <i class="fa fa-seedling"></i>
-                <span> Type: Private tour</span>
-              </li>
-              <li class="d-flex align-items-center gap-2">
-                <i class="fa fa-calendar"></i>
+                <img src="image/calender.svg" class="privateImg" alt="">
                 <span> Type: Private tour</span>
               </li>
               <li class="d-flex align-items-center gap-2">
@@ -188,11 +164,35 @@
               class="d-flex align-items-center gap-3 justify-content-center justify-content-md-start p-md-2"
             >
               <li class="d-flex align-items-center gap-2">
-                <i class="fa fa-seedling"></i>
+                <img src="image/privetTour.svg" class="privateImg" alt="">
                 <span> Type: Private tour</span>
               </li>
               <li class="d-flex align-items-center gap-2">
-                <i class="fa-solid fa-circle-calendar"></i>
+                <img src="image/calender.svg" class="privateImg" alt="">
+                <span> Type: Private tour</span>
+              </li>
+              <li class="d-flex align-items-center gap-2">
+                <i class="fa fa-star"></i>
+                <span>4.8/5</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="image/destination3.jpg" class="d-block w-100" alt="..." />
+          <div class="carousel-caption contentHeader">
+            <p>CAIRO NILE CRUISE & HURGHADA HOLIDAY TOUR</p>
+          </div>
+          <div class="infoTour">
+            <ul
+              class="d-flex align-items-center gap-3 justify-content-center justify-content-md-start p-md-2"
+            >
+              <li class="d-flex align-items-center gap-2">
+                <img src="image/privetTour.svg" class="privateImg" alt="">
+                <span> Type: Private tour</span>
+              </li>
+              <li class="d-flex align-items-center gap-2">
+                <img src="image/calender.svg" class="privateImg" alt="">
                 <span> Type: Private tour</span>
               </li>
               <li class="d-flex align-items-center gap-2">
