last push to send to mester ali

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             style="font-size: 27px"
           ></i>
           <i
-            class="fa fa-window-close"
+            class="fa fa-times"
             aria-hidden="true"
             id="close"
             style="font-size: 27px"
@@ -217,7 +217,7 @@
                 <div class="days">8 Days | Private Tour</div>
                 <!-- price and view button  -->
                 <div class="priceAndView">
-                  <div class="price">
+                  <div class="price mt-1">
                     <span> start form </span>
                     <span>$5897</span>
                   </div>
@@ -426,7 +426,7 @@
         <p class="description">Find the best offer suits your budget</p>
       </div>
       <!-- gallry -->
-      <div class="row mb-5 gallary_container">
+      <div class="row gallary_container">
         <div class="col-6 leftSide">
           <div class="imagefull_H">
             <div class="layout"></div>
