--- a/listTour.html
+++ b/listTour.html
@@ -69,7 +69,7 @@
             style="font-size: 27px"
           ></i>
           <i
-            class="fa fa-window-close"
+            class="fa fa-times"
             aria-hidden="true"
             id="close"
             style="font-size: 27px"
@@ -596,10 +596,10 @@
           </ul>
         </div>
         <div class="col-sm-12 col-md-9">
-          <div class="d-flex flex-column gap-5">
+          <div class="d-flex flex-column gap-3 gap-md-5">
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -643,7 +643,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -687,7 +687,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -731,7 +731,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -775,7 +775,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -819,7 +819,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -863,7 +863,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -907,7 +907,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -951,7 +951,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -995,7 +995,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -1039,7 +1039,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
@@ -1083,7 +1083,7 @@
             </a>
             <!-- card -->
             <a href="singleTour.html">
-              <div class="d-flex cardList shadow-lg" style="cursor: pointer">
+              <div class="d-flex cardList" style="cursor: pointer">
                 <!-- image -->
                 <div class="imageCard">
                   <img src="image/destination1.jpg" alt="" />
