--- a/singleTour.html
+++ b/singleTour.html
@@ -70,7 +70,7 @@
             style="font-size: 27px"
           ></i>
           <i
-            class="fa fa-window-close"
+            class="fa fa-times"
             aria-hidden="true"
             id="close"
             style="font-size: 27px"
@@ -204,8 +204,14 @@
         </div>
       </div>
     </div>
+    <!-- button inquery -->
+    <div class="button_moblie">
+   <button>
+    INQUIRE NOW!
+   </button>
+    </div>
     <!-- taps section  -->
-    <div class="container-sm">
+    <div class="container-sm position-relative mb-3 mb-md-5">
       <ul
         class="d-flex justify-content-center align-items-center gap-2 tapsTour"
       >
@@ -712,7 +718,7 @@
         
          </div>
          <div class="col-sm-12 pt-4 col-md-3">
-          <div class="inquireSection rounded-2 overflow-hidden ">
+          <div class="inquireSection rounded-2 overflow-hidden " id="formInquery">
              <div class="headerInquery text-center " >
               INQUIRE NOW
              </div> 
