--- a/singleTour.html
+++ b/singleTour.html
@@ -1015,7 +1015,7 @@
         </div>
       </div>
     </div>
-    <div class="copyRightSection">
+    <div class="copyRightSection  mb-md-0 " style="margin-bottom: 88px;" >
       <div>Copyright © GoElite Club 2021. All right reserved.</div>
       <div>Terms and Privacy Policy</div>
     </div>
