ahmed ibrahem changed

--- a/listTour.html
+++ b/listTour.html
@@ -196,7 +196,16 @@
                         class="counterContainer d-flex justify-content-between align-items-center gap-2 p-2 border rounded-3"
                       >
                         <img src="image/Minus.svg" id="mins" alt="" />
-                        <span class="number"> 0 </span>
+                        <input
+                          id="adults"
+                          type="text"
+                          name="adults"
+                          class="form-control input-number book_all"
+                          value="0"
+                          min="1"
+                          max="100"
+                          readonly=""
+                        />
                         <img src="image/Plus.svg" id="plus" alt="" />
                       </div>
                     </div>
@@ -208,7 +217,16 @@
                         class="counterContainer d-flex justify-content-between align-items-center gap-2 p-2 border rounded-3"
                       >
                         <img src="image/Minus.svg" id="mins" alt="" />
-                        <span class="number"> 0 </span>
+                        <input
+                          id="Children"
+                          type="text"
+                          name="Children"
+                          class="form-control input-number book_all"
+                          value="0"
+                          min="1"
+                          max="100"
+                          readonly=""
+                        />
                         <img src="image/Plus.svg" id="plus" alt="" />
                       </div>
                     </div>
@@ -220,7 +238,16 @@
                         class="counterContainer d-flex justify-content-between align-items-center gap-2 p-2 border rounded-3"
                       >
                         <img src="image/Minus.svg" id="mins" alt="" />
-                        <span class="number"> 0 </span>
+                        <input
+                          id="Infants"
+                          type="text"
+                          name="Infants"
+                          class="form-control input-number book_all"
+                          value="0"
+                          min="1"
+                          max="100"
+                          readonly=""
+                        />
                         <img src="image/Plus.svg" id="plus" alt="" />
                       </div>
                     </div>
