--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
               <!--singil review  -->
               <div class="review_box">
                 <div class="athorImage">
-                  <img src="image/athor2.jpg" alt="" />
+                  <img src="image/athor (1).jpg" alt="" />
                 </div>
                 <div class="review">
                   <!-- title and star -->
@@ -500,7 +500,7 @@
               <!--singil review  -->
               <div class="review_box">
                 <div class="athorImage">
-                  <img src="image/athor3.jpg" alt="" />
+                  <img src="image/athor (1).jpg" alt="" />
                 </div>
                 <div class="review">
                   <!-- title and star -->
@@ -529,7 +529,7 @@
               <!--singil review  -->
               <div class="review_box">
                 <div class="athorImage">
-                  <img src="image/athor1.jpg" alt="" />
+                  <img src="image/athor (1).jpg" alt="" />
                 </div>
                 <div class="review">
                   <!-- title and star -->
